got exapnded day cells working, need to get pages working next